fix(Contribute Pop-Up Ordering): added Contribute Pop-Up to Z-index list in styles, removed button z-index

--- a/ui/src/shared/css/styles.scss
+++ b/ui/src/shared/css/styles.scss
@@ -43,7 +43,8 @@
     --bold-weight: 600;
 
     // z-index priorities
-    --modal-z-index: 3;
+    --modal-z-index: 4;
+    --collaborate-card-z-index: 3;
     --logout-dropdown-z-index: 2;
     --explore-dropdown-list-items-z-index: 1;
 
